Lade till fyrar för VHF/UHF men även SHF.

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -250,51 +250,66 @@ Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje å
 
 Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en
 viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
+\clearpage
 
 \begin{landscape}
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
-
 \subsubsection{Svenska fyrar VHF/UHF}
-\begin{tabular}{rlrllrrrc}
-\textbf{Signal} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & \textbf{Masl} & \textbf{Magl} & \textbf{P} & \textbf{Ritktning} \\ \hline
+\begin{longtable}{rlrllrrrc}
+\textbf{Signal} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
+\textbf{Masl/m} & \textbf{Magl/m} & \textbf{Effekt/W} & \textbf{Ritktning} \\ \hline
 
-SK4MPI	& Borlänge                      & 144.4120   & QRV	& JP70NJ & 520 & 10  & 200    &	NV+NO    \\
-SK7MHH	& Färjestaden                   & 432.4400   & QRV	& JO86GP & 45  & 15  &        &          \\
-SK4BX/B	& Garphyttan / Storstenshöjden	& 432.4600   & QRV	& JO79LH & 270 & 10  & 50     &	N E S W  \\
-SK4BX/B	& Garphyttan / Ånnaboda         & 10368.9600 & QRV	& JO79LI & 270 & 10  &        &          \\
-SK4BX/B	& Garphyttan / Ånnaboda         & 1296.9600  & QRV	& JO79LI & 270 & 10  &        &          \\
-SK4BX/B	& Garphyttan / Ånnaboda         & 2320.9600  & QRT	& JO79LI & 270 & 10  &        &          \\
-SK4BX/B	& Garphyttan / Ånnaboda         & 5760.8000  & QRT	& JO79LI & 270 & 10  &        &          \\
-SK6MHI	& Göteborg                      & 2320.8000  & QRV	& JO57XQ & 135 & 40  & 150    &	Omni     \\
-SK6YH/B	& Göteborg                      & 10368.8100 & QRV	& JO57XQ & 135 & 40  & 10000  &	190 deg  \\
-SK6MHI	& Göteborg                      & 24048.8000 & QRV	& JO57XQ & 135 & 408 & 10     &	Omni     \\
-SK6MHI	& Göteborg                      & 10368.800  & QRV	& JO57XQ & 130 & 10  & 1      &	Omni     \\
-SK6MHI	& Hönö                          & 1296.8000  & QRV	& JO57TQ & 40  & 30  & 30     &	Omni     \\
-SK2VHG	& Kiruna / Esrange Space Center	& 144.4350   & Temp QRT	& KP07MU & 630 &     &        &	S        \\
-SK2CP/B	& Kiruna / Esrange Space Center	& 50.0520    & QRV	& KP07MU & 630 &     & 30     &	Omni     \\
-SK1UHF	& Klintehamn                    & 432.4050   & QRV	& JO97CJ & 65  & 60  & 30     &	Omni     \\
-SK1VHF	& Klintehamn                    & 144.4470   & QRV	& JO97CJ & 65  & 60  & 10     &	Omni     \\
-SK1SHH	& Klintehamn                    & 10368.8500 & QRV	& JO97CJ & 52  & 52  & 10000  &	360 deg  \\
-SK1UHG	& Klintehamn                    & 1296.9500  & QRV	& JO97CJ & 65  & 60  & 30     &	Omni     \\
-SK6QW/B	& Mariestad                     & 50.0600    & QRV	& JO68WR &     & 8   & 8      &	Omni     \\
-SK3UHF	& Nordingrå / Rävsön            & 432.4550   & QRV	& JP92FW & 200 & 8   & 50     &	Omni     \\
-SK3UHG	& Nordingrå / Rävsön            & 1296.8550  & QRV	& JP92FW & 200 & 10  & 30     &	Omni     \\
-SK3UHH	& Nordingrå / Rävsön            & 2320.9000  & QRV	& JP92FW & 200 & 5   &        &	220 deg. \\
-SK7VHF	& Sjöbo                         & 144.4610   & QRV	& JO65UQ & 25  & 25  & 10     &	Omni     \\
-SKØCT/B	& Stockholm                     & 5760.903   & QRV	& JO99JX & 60  & 30  & 80     &	Omni     \\
-SK6SHG	& Tjörn Island                  & 24048.8830 & QRV	& JO57TX & 110 & 8   & 2x1W   &	N / S    \\
-SK6VHF	& Tjörn Island                  & 144.4480   & QRV	& JO57TX & 120 & 12  & 10     &	Omni     \\
-SK6UHI	& Tjörn Island                  & 1296.8050  & QRV	& JO57TX & 125 & 18  & 30     &	Omni     \\
-SK6UHF	& Varberg/Veddige               & 432.4120   & QRV	& JO67EH & 175 & 25  & 10     &	Omni     \\
-SK2VHF	& Vindeln / Buberget            & 144.4570   & QRV	& JP94TF & 300 & 10  & 80     &	N+SV     \\
-SKØEN/B	& Väddö                         & 10368.8470 & QRV	& JO99JX & 60  & 30  & 10000  &	360 deg  \\
-SKØEN/B	& Väddö                         & 1296.8350  & QRV	& JO99JX & 70  & 40  & 4      &	Omni     \\
-SK2SHF	& Vännäs / Granlundsberget	& 2320.9850  & QRV	& JP93VU & 250 & 50  & 10 / 5 &          \\
-SK2SHF	& Vännäs / Granlundsberget	& 1296.9850  & QRV	& JP93VU & 250 & 50  & 10 / 5 &          \\
-SK7GH/B	& Värnamo                       & 28.2980    & QRV	& JO77BF & 230 & 10  & 5      &	Omni     \\
-SK3SIX	& Östersund                     & 50.0700    & QRV	& JP73HC & 470 & 7   & 10     &	Omni     \\
+SK4MPI  & Borlänge               & 144.4120  & QRV & JP70NJ & 520 & 10 & 200    & NV+NO    \\
+SK7MHH  & Färjestaden            & 432.4400  & QRV & JO86GP & 45  & 15 &        &          \\
+SK4BX/B & Garphyttan/Storstensh. & 432.4600  & QRV & JO79LH & 270 & 10 & 50     & N E S W  \\
+SK4BX/B & Garp./Ånnaboda         & 1296.9600 & QRV & JO79LI & 270 & 10 &        &          \\
+SK4BX/B & Garp./Ånnaboda         & 2320.9600 & QRT & JO79LI & 270 & 10 &        &          \\
+SK6MHI  & Göteborg               & 2320.8000 & QRV & JO57XQ & 135 & 40 & 150    & Omni     \\
+SK6MHI  & Hönö                   & 1296.8000 & QRV & JO57TQ & 40  & 30 & 30     & Omni     \\
+SK2VHG  & Kiruna / Esrange       & 144.4350  & QRT & KP07MU & 630 &    &        & S        \\
+SK2CP/B & Kiruna / Esrange       & 50.0520   & QRV & KP07MU & 630 &    & 30     & Omni     \\
+SK1UHF  & Klintehamn             & 432.4050  & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
+SK1VHF  & Klintehamn             & 144.4470  & QRV & JO97CJ & 65  & 60 & 10     & Omni     \\
+SK1UHG  & Klintehamn             & 1296.9500 & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
+SK6QW/B & Mariestad              & 50.0600   & QRV & JO68WR &     & 8  & 8      & Omni     \\
+SK3UHF  & Nordingrå/Rävsön       & 432.4550  & QRV & JP92FW & 200 & 8  & 50     & Omni     \\
+SK3UHG  & Nordingrå/Rävsön       & 1296.8550 & QRV & JP92FW & 200 & 10 & 30     & Omni     \\
+SK3UHH  & Nordingrå/Rävsön       & 2320.9000 & QRV & JP92FW & 200 & 5  &        & 220 deg. \\
+SK7VHF  & Sjöbo                  & 144.4610  & QRV & JO65UQ & 25  & 25 & 10     & Omni     \\
+SK6VHF  & Tjörn Island           & 144.4480  & QRV & JO57TX & 120 & 12 & 10     & Omni     \\
+SK6UHI  & Tjörn Island           & 1296.8050 & QRV & JO57TX & 125 & 18 & 30     & Omni     \\
+SK6UHF  & Varberg/Veddige        & 432.4120  & QRV & JO67EH & 175 & 25 & 10     & Omni     \\
+SK2VHF  & Vindeln/Bub.           & 144.4570  & QRV & JP94TF & 300 & 10 & 80     & N+SV     \\
+SKØEN/B & Väddö                  & 1296.8350 & QRV & JO99JX & 70  & 40 & 4      & Omni     \\
+SK2SHF  & Vännäs/Granlundsb.     & 2320.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
+SK2SHF  & Vännäs/Granlundsb.     & 1296.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
+SK7GH/B & Värnamo                & 28.2980   & QRV & JO77BF & 230 & 10 & 5      & Omni     \\
+SK3SIX  & Östersund              & 50.0700   & QRV & JP73HC & 470 & 7  & 10     & Omni     \\
+
+\end{longtable}
+
+\subsubsection{Svenska fyrar SHF}
+\begin{tabular}{rlrllrrrc}
+
+\textbf{Signal} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
+\textbf{Masl/m} & \textbf{Magl/m} & \textbf{Effekt/W} & \textbf{Ritktning} \\ \hline
+
+SK4BX/B & Garphyttan/Ånnaboda & 10368.9600 & QRV & JO79LI & 270 & 10  &       &         \\
+SK4BX/B & Garphyttan/Ånnaboda & 5760.8000  & QRT & JO79LI & 270 & 10  &       &         \\
+SK6YH/B & Göteborg            & 10368.8100 & QRV & JO57XQ & 135 & 40  & 10000 & 190 deg \\
+SK6MHI  & Göteborg            & 24048.8000 & QRV & JO57XQ & 135 & 408 & 10    & Omni    \\
+SK6MHI  & Göteborg            & 10368.800  & QRV & JO57XQ & 130 & 10  & 1     & Omni    \\
+SK1SHH  & Klintehamn          & 10368.8500 & QRV & JO97CJ & 52  & 52  & 10000 & 360 deg \\
+SKØCT/B & Stockholm           & 5760.903   & QRV & JO99JX & 60  & 30  & 80    & Omni    \\
+SK6SHG  & Tjörn Island        & 24048.8830 & QRV & JO57TX & 110 & 8   & 2x1W  & N / S   \\
+SKØEN/B & Väddö               & 10368.8470 & QRV & JO99JX & 60  & 30  & 10000 & 360 deg \\
+
 \end{tabular}
+
+*) SHF-fyrarna får vara med på VHF/UHF-delen till SHF har fått en egen del i listan.
+
 \clearpage
+
 
 \subsubsection{Repeatrar distrikt 0}
 \footnotesize
