Påbörjade fyrar mm för HF

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -1,7 +1,8 @@
 \begin{landscape}
 \section{Frekvenser Amatörradio HF}
 
-%%\section{Repeatrar, länkar och fyrar}
+%% \section{Repeatrar, länkar och fyrar}
+%% \subsection{Svenska fyrar HF}
 %% \subsection{Repeatrar distrikt 0}
 %% \footnotesize
 %% \begin{longtable}{llllrrlcl}
