--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -250,49 +250,48 @@ Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje å
 
 Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en
 viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
-\clearpage
 
-\begin{landscape}
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
+\begin{landscape}
 \subsubsection{Svenska fyrar VHF/UHF}
 \begin{longtable}{rlrllrrrc}
-\textbf{Signal} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
-\textbf{Masl/m} & \textbf{Magl/m} & \textbf{Effekt/W} & \textbf{Ritktning} \\ \hline
+\textbf{Signal} & \textbf{QTH}  & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
+\textbf{Masl}   & \textbf{Magl} & \textbf{Effekt}   & \textbf{Ritktning} \\ \hline
 
-SK4MPI  & Borlänge               & 144.4120  & QRV & JP70NJ & 520 & 10 & 200    & NV+NO    \\
-SK7MHH  & Färjestaden            & 432.4400  & QRV & JO86GP & 45  & 15 &        &          \\
-SK4BX/B & Garphyttan/Storstensh. & 432.4600  & QRV & JO79LH & 270 & 10 & 50     & N E S W  \\
-SK4BX/B & Garp./Ånnaboda         & 1296.9600 & QRV & JO79LI & 270 & 10 &        &          \\
-SK4BX/B & Garp./Ånnaboda         & 2320.9600 & QRT & JO79LI & 270 & 10 &        &          \\
-SK6MHI  & Göteborg               & 2320.8000 & QRV & JO57XQ & 135 & 40 & 150    & Omni     \\
-SK6MHI  & Hönö                   & 1296.8000 & QRV & JO57TQ & 40  & 30 & 30     & Omni     \\
-SK2VHG  & Kiruna / Esrange       & 144.4350  & QRT & KP07MU & 630 &    &        & S        \\
-SK2CP/B & Kiruna / Esrange       & 50.0520   & QRV & KP07MU & 630 &    & 30     & Omni     \\
-SK1UHF  & Klintehamn             & 432.4050  & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
-SK1VHF  & Klintehamn             & 144.4470  & QRV & JO97CJ & 65  & 60 & 10     & Omni     \\
-SK1UHG  & Klintehamn             & 1296.9500 & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
-SK6QW/B & Mariestad              & 50.0600   & QRV & JO68WR &     & 8  & 8      & Omni     \\
-SK3UHF  & Nordingrå/Rävsön       & 432.4550  & QRV & JP92FW & 200 & 8  & 50     & Omni     \\
-SK3UHG  & Nordingrå/Rävsön       & 1296.8550 & QRV & JP92FW & 200 & 10 & 30     & Omni     \\
-SK3UHH  & Nordingrå/Rävsön       & 2320.9000 & QRV & JP92FW & 200 & 5  &        & 220 deg. \\
-SK7VHF  & Sjöbo                  & 144.4610  & QRV & JO65UQ & 25  & 25 & 10     & Omni     \\
-SK6VHF  & Tjörn Island           & 144.4480  & QRV & JO57TX & 120 & 12 & 10     & Omni     \\
-SK6UHI  & Tjörn Island           & 1296.8050 & QRV & JO57TX & 125 & 18 & 30     & Omni     \\
-SK6UHF  & Varberg/Veddige        & 432.4120  & QRV & JO67EH & 175 & 25 & 10     & Omni     \\
-SK2VHF  & Vindeln/Bub.           & 144.4570  & QRV & JP94TF & 300 & 10 & 80     & N+SV     \\
-SKØEN/B & Väddö                  & 1296.8350 & QRV & JO99JX & 70  & 40 & 4      & Omni     \\
-SK2SHF  & Vännäs/Granlundsb.     & 2320.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
-SK2SHF  & Vännäs/Granlundsb.     & 1296.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
-SK7GH/B & Värnamo                & 28.2980   & QRV & JO77BF & 230 & 10 & 5      & Omni     \\
-SK3SIX  & Östersund              & 50.0700   & QRV & JP73HC & 470 & 7  & 10     & Omni     \\
+SK4MPI  & Borlänge           & 144.4120  & QRV & JP70NJ & 520 & 10 & 200    & NV+NO    \\
+SK7MHH  & Färjestaden        & 432.4400  & QRV & JO86GP & 45  & 15 &        &          \\
+SK4BX/B & Garphyttan/Storst. & 432.4600  & QRV & JO79LH & 270 & 10 & 50     & NESW     \\
+SK4BX/B & Garp./Ånnaboda     & 1296.9600 & QRV & JO79LI & 270 & 10 &        &          \\
+SK4BX/B & Garp./Ånnaboda     & 2320.9600 & QRT & JO79LI & 270 & 10 &        &          \\
+SK6MHI  & Göteborg           & 2320.8000 & QRV & JO57XQ & 135 & 40 & 150    & Omni     \\
+SK6MHI  & Hönö               & 1296.8000 & QRV & JO57TQ & 40  & 30 & 30     & Omni     \\
+SK2VHG  & Kiruna/Esrange     & 144.4350  & QRT & KP07MU & 630 &    &        & S        \\
+SK2CP/B & Kiruna/Esrange     & 50.0520   & QRV & KP07MU & 630 &    & 30     & Omni     \\
+SK1UHF  & Klintehamn         & 432.4050  & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
+SK1VHF  & Klintehamn         & 144.4470  & QRV & JO97CJ & 65  & 60 & 10     & Omni     \\
+SK1UHG  & Klintehamn         & 1296.9500 & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
+SK6QW/B & Mariestad          & 50.0600   & QRV & JO68WR &     & 8  & 8      & Omni     \\
+SK3UHF  & Nordingrå/Rävsön   & 432.4550  & QRV & JP92FW & 200 & 8  & 50     & Omni     \\
+SK3UHG  & Nordingrå/Rävsön   & 1296.8550 & QRV & JP92FW & 200 & 10 & 30     & Omni     \\
+SK3UHH  & Nordingrå/Rävsön   & 2320.9000 & QRV & JP92FW & 200 & 5  &        & 220 deg. \\
+SK7VHF  & Sjöbo              & 144.4610  & QRV & JO65UQ & 25  & 25 & 10     & Omni     \\
+SK6VHF  & Tjörn Island       & 144.4480  & QRV & JO57TX & 120 & 12 & 10     & Omni     \\
+SK6UHI  & Tjörn Island       & 1296.8050 & QRV & JO57TX & 125 & 18 & 30     & Omni     \\
+SK6UHF  & Varberg/Veddige    & 432.4120  & QRV & JO67EH & 175 & 25 & 10     & Omni     \\
+SK2VHF  & Vindeln/Bub.       & 144.4570  & QRV & JP94TF & 300 & 10 & 80     & N+SV     \\
+SKØEN/B & Väddö              & 1296.8350 & QRV & JO99JX & 70  & 40 & 4      & Omni     \\
+SK2SHF  & Vännäs/Granlundsb. & 2320.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
+SK2SHF  & Vännäs/Granlundsb. & 1296.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
+SK7GH/B & Värnamo            & 28.2980   & QRV & JO77BF & 230 & 10 & 5      & Omni     \\
+SK3SIX  & Östersund          & 50.0700   & QRV & JP73HC & 470 & 7  & 10     & Omni     \\
 
 \end{longtable}
 
 \subsubsection{Svenska fyrar SHF}
 \begin{tabular}{rlrllrrrc}
 
-\textbf{Signal} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
-\textbf{Masl/m} & \textbf{Magl/m} & \textbf{Effekt/W} & \textbf{Ritktning} \\ \hline
+\textbf{Signal} & \textbf{QTH}  & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
+\textbf{Masl}   & \textbf{Magl} & \textbf{Effekt}   & \textbf{Ritktning} \\ \hline
 
 SK4BX/B & Garphyttan/Ånnaboda & 10368.9600 & QRV & JO79LI & 270 & 10  &       &         \\
 SK4BX/B & Garphyttan/Ånnaboda & 5760.8000  & QRT & JO79LI & 270 & 10  &       &         \\
@@ -314,64 +313,64 @@ SKØEN/B & Väddö               & 10368.8470 & QRV & JO99JX & 60  & 30  & 10000
 \subsubsection{Repeatrar distrikt 0}
 \footnotesize
 \begin{longtable}{llllrrlcl}
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
-	\endhead
-	Repeater          & FM           & SMØWIU/R      & Botkyrka     & 434.8750          & -2MHz          & 77,0Hz          & QRV             & JO89WF           \\
-	Repeater          & FM           & SAØAZT/R      & Brottby      & 434.8000          & -2MHz          & 1750/77 Hz$^1$  & QRV             & JO99DA           \\
-	Repeater          & FM           & SMØRDZ        & Brottby      & 145.6500          & -600kHz        & 1750            & QRV             & JO99DN           \\
-	Repeater          & DMR          & SKØRYG        & Färingsö     & 434.6625          & -2MHz          & DV Carrier      & Plan            & JO89VI           \\
-	Repeater          & FM           & SKØVR/R       & Gustavsberg  & 434.9750          & -2MHz          & 1750            & QRV             & JO99EH           \\
-	Link              & FM           & SKØMM         & Gustavsberg  & 434.2250          &                & 91,5Hz          & QRV             & JO99EH           \\
-	Repeater          & D-Star       & SKØQO-B       & Haninge      & 434.5750          & -2MHz          & DV Carrier      & QRV             & JO99CF           \\
-	Repeater          & FM           & SKØQO/R       & Haninge      & 145.6875          & -600kHz        & 77,0Hz          & QRV             & JO99BE           \\
-	Repeater          & FM           & SKØQO/R       & Haninge      & 434.7500          & -2MHz          & 77,0Hz          & QRV             & JO99BE           \\
-	Repeater          & FM           & SKØNN/R       & Haninge      & 434.7750          & -2MHz          & Carrier         & QRV             & JO99BE           \\
-	Hotspot           & D-Star       & SGØBON        & Haninge      & 433.4500          &                & DV Carrier      & QRV             & JO99CE           \\
-	Repeater          & DMR          & SGØSZK        & Hemmesta     & 434.5875          & -2MHz          & DMR 240002      & QRV             & JO99FH           \\
-	Repeater          & FM           & SMØWAJ/R      & Johanneshov  & 434.6500          & -2MHz          & Carrier         & QRV             & JO99AH           \\
-	Link              & FM           & SMØUAO        & Kopparmora   & 434.4875          &                & 91,5 Hz         & QRV             & JO99HI           \\
-	Hotspot           & D-Star       & SGØYOS-C      & L. Essingen  & 145.2375          &                & DV Carrier      & QRV             & JO99AH           \\
-	Hotspot           & D-Star       & SEØYOS-C      & M/Y Erika    & 434.4500          &                & DV Carrier      & QRV             & JO99AH           \\
-	Repeater          & FM           & SKØMK/R       & Mariefred    & 145.7000          & -600kHz        & 1750            & QRV             & JO89OG           \\
-	Repeater          & FM           & SLØDZ/R       & Muskö        & 51.9500           & -600kHz        & 77,0 Hz         & QRV             & JO98BX           \\
-	Repeater          & FM           & SMØGJK/R      & Norrtälje    & 145.6875          & -600kHz        & 1750            & QRV             & JO99IS           \\
-	Repeater          & FM           & SMØGJK/R      & Norrtälje    & 434.9000          & -2MHz          & 1750            & QRV             & JO99IS           \\
-	Repeater          & FM           & SKØBJ/R       & Nynäshamn    & 145.7125          & -600kHz        & 77,0 Hz         & QRV             & JO88XV           \\
-	Repeater          & FM           & SEØE/R        & Saltsjöbo    & 51.8100           & -600kHz        & 1750            & QRV             & JO99CG           \\
-	Link              & FM           & SKØMM         & Sandhamn     & 434.3750          &                & 91,5 Hz         & QRV             & JO99KG           \\
-	Hotspot           & D-Star       & SKØAI-B       & Segeltorp    & 433.4625          &                & DV Carrier      & QRV             & JO89XG           \\
-	Repeater          & DMR/FM       & SKØRPF        & Sigtuna      & 434.8875          & -2MHz          & DMR/123,0Hz     & QRV             & JO89VP           \\
-	Repeater          & FM           & SMØWAJ/R      & Skärholmen   & 434.9250          & +1,6MHz        & Carrier         & QRV             & JO89WG           \\
-	Repeater          & FM           & SMØHGS/R      & Skärholmen   & 145.7250          & -600kHz        & 77,0 Hz         & QRV             & JO89WG           \\
-	Repeater          & FM           & SMØWHP        & Sollentuna   & 434.6000          & -2MHz          & 1750 Hz         & QRV             & JO89XL           \\
-	Repeater          & FM           & SKØCT/R       & Solna        & 434.9500          & -2MHz          & 77,0 Hz         & QRV             & JO89XJ           \\
-	Repeater          & FM           & SKØZA/R       & Solna        & 434.8500          & -2MHz          & 123,0 Hz        & QRV             & JO89XI           \\
-	Repeater          & FM           & SMØOFV/R      & Solna        & 145.7625          & -600kHz        & 123,0 Hz        & QRV             & JO99AI           \\
-	Repeater          & FM           & SKØCT/R       & Solna        & 29.6200           & -100kHz        & 77,0 Hz         & ?               & JO89XJ           \\
-	Repeater          & FM           & SMØKOT        & Stockholm    & 434.8250          & -2MHz          & 1750 Hz         & QRT             &                  \\
-	Repeater          & DMR          & SMØRMQ        & Stockholm    & 434.5125          & -2MHz          & DMR 240010      & QRV             & JO99CH           \\
-	Repeater          & FM           & SMØWAJ/R      & Stockholm    & 434.8375          & -2MHz          &                 & Plan            & JO99AH           \\
-	Hotspot           & D-Star       & SKØVF-C       & Bandhagen    & 145.3625          &                & DV Carrier      & QRV             & JO99AG           \\
-	Hotspot           & D-Star       & SKØVF-B       & Bandhagen    & 1296.7000         &                & DV Carrier      & QRV             & JO99AG           \\
-	Repeater          & FM           & SKØCT/R       & Kista        & 1297.0250         & -6MHz          & Carrier         & QRV             & JO89XJ           \\
-	Repeater          & FM           & SKØCT/R       & Kista        & 434.6250          & -2MHz          & 77,0 Hz         & QRV             & JO89XJ           \\
-	Repeater          & FM           & SKØPQ/R       & Kista        & 145.6750          & -600kHz        & 123,0 Hz        & QRV             & JO86XV           \\
-	Repeater          & DMR          & SAØAZT/R      & Kista        & 434.9875          & -2MHz          & DMR             & QRV             & JO89XJ           \\
-	Repeater          & D-Star       & SKØPT         & Kungsängen   & 434.5500          & -2MHz          & DV Carrier      & Plan            & JO89UL           \\
-	Repeater          & FM           & SMØYIX/R      & Söder        & 434.7250          & -2MHz          & 77,0 Hz         & QRV             & JO99BH           \\
-	Repeater          & DMR          & SKØNN         & Södertörn    & 434.5375          & -2MHz          & DMR             & QRV             & JO99CF           \\
-	Hotspot           & D-Star       & SBØX-B        & Uppl. Väsby  & 433.5750          &                & DV Carrier      & QRV             & JO89XM           \\
-	Repeater          & DMR          & SKØRYG        & Uppl. Väsby  & 434.7625          & -2MHz          & DMR/123,0Hz     & QR              & JO89XM           \\
-	Hotspot           & D-Star       & SGØAMO        & Åkersberga   & 145.3625          &                & DV Carrier      & QRV             & JO99DL           \\
-	Repeater          & FM           & SKØRIX        & Sthlm city   & 145.6250          & -600kHz        & Carrier         & QRV             & JO99AH           \\
-	Repeater          & DMR          & SKØMG         & Sthlm city   & 434.6875          & -2MHz          & DMR 240099      & QRV             & JO99AI           \\
-	Repeater          & FM           & SM5DWC/R      & Södertälje   & 434.8250          & -2MHz          & 1750/77,0Hz     & QRV             & JO89TE           \\
-	Repeater          & FM           & SMØMMO/R      & Tullinge     & 145.6625          & -600kHz        & 77,0 Hz         & QRV             & JO89XF           \\
-	Repeater          & FM           & SKØMT/R       & Täby         & 434.7000          & +1,6MHz        & Carrier         & QRV             & JO99AK           \\
-	Repeater          & FM           & SKØMT/R       & Täby         & 434.7375          & -2MHz          & 77,0 Hz         & Plan            & JO99AK           \\
-	Repeater          & DMR          & SKØMQ         & Täby         & 434.5625          & -2MHz          & DMR             & QRV             & JO99AK           \\
-	Repeater          & FM           & SKØRYG        & Uppl. Väsby  & 434.6750          & -2MHz          & 1750/77,0Hz     & QRV             & JO89XM           \\
-	Repeater          & FM           & SKØRYG        & Uppl. Väsby  & 51.9700           & -600kHz        & 1750/77,0Hz     & QRV             & JO89WM
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
+
+Repeater & FM     & SMØWIU/R & Botkyrka    & 434.8750  & -2MHz   & 77,0Hz         & QRV  & JO89WF \\
+Repeater & FM     & SAØAZT/R & Brottby     & 434.8000  & -2MHz   & 1750/77 Hz$^1$ & QRV  & JO99DA \\
+Repeater & FM     & SMØRDZ   & Brottby     & 145.6500  & -600kHz & 1750           & QRV  & JO99DN \\
+Repeater & DMR    & SKØRYG   & Färingsö    & 434.6625  & -2MHz   & DV Carrier     & Plan & JO89VI \\
+Repeater & FM     & SKØVR/R  & Gustavsberg & 434.9750  & -2MHz   & 1750           & QRV  & JO99EH \\
+Link     & FM     & SKØMM    & Gustavsberg & 434.2250  &         & 91,5Hz         & QRV  & JO99EH \\
+Repeater & D-Star & SKØQO-B  & Haninge     & 434.5750  & -2MHz   & DV Carrier     & QRV  & JO99CF \\
+Repeater & FM     & SKØQO/R  & Haninge     & 145.6875  & -600kHz & 77,0Hz         & QRV  & JO99BE \\
+Repeater & FM     & SKØQO/R  & Haninge     & 434.7500  & -2MHz   & 77,0Hz         & QRV  & JO99BE \\
+Repeater & FM     & SKØNN/R  & Haninge     & 434.7750  & -2MHz   & Carrier        & QRV  & JO99BE \\
+Hotspot  & D-Star & SGØBON   & Haninge     & 433.4500  &         & DV Carrier     & QRV  & JO99CE \\
+Repeater & DMR    & SGØSZK   & Hemmesta    & 434.5875  & -2MHz   & DMR 240002     & QRV  & JO99FH \\
+Repeater & FM     & SMØWAJ/R & Johanneshov & 434.6500  & -2MHz   & Carrier        & QRV  & JO99AH \\
+Link     & FM     & SMØUAO   & Kopparmora  & 434.4875  &         & 91,5 Hz        & QRV  & JO99HI \\
+Hotspot  & D-Star & SGØYOS-C & L. Essingen & 145.2375  &         & DV Carrier     & QRV  & JO99AH \\
+Hotspot  & D-Star & SEØYOS-C & M/Y Erika   & 434.4500  &         & DV Carrier     & QRV  & JO99AH \\
+Repeater & FM     & SKØMK/R  & Mariefred   & 145.7000  & -600kHz & 1750           & QRV  & JO89OG \\
+Repeater & FM     & SLØDZ/R  & Muskö       & 51.9500   & -600kHz & 77,0 Hz        & QRV  & JO98BX \\
+Repeater & FM     & SMØGJK/R & Norrtälje   & 145.6875  & -600kHz & 1750           & QRV  & JO99IS \\
+Repeater & FM     & SMØGJK/R & Norrtälje   & 434.9000  & -2MHz   & 1750           & QRV  & JO99IS \\
+Repeater & FM     & SKØBJ/R  & Nynäshamn   & 145.7125  & -600kHz & 77,0 Hz        & QRV  & JO88XV \\
+Repeater & FM     & SEØE/R   & Saltsjöbo   & 51.8100   & -600kHz & 1750           & QRV  & JO99CG \\
+Link     & FM     & SKØMM    & Sandhamn    & 434.3750  &         & 91,5 Hz        & QRV  & JO99KG \\
+Hotspot  & D-Star & SKØAI-B  & Segeltorp   & 433.4625  &         & DV Carrier     & QRV  & JO89XG \\
+Repeater & DMR/FM & SKØRPF   & Sigtuna     & 434.8875  & -2MHz   & DMR/123,0Hz    & QRV  & JO89VP \\
+Repeater & FM     & SMØWAJ/R & Skärholmen  & 434.9250  & +1,6MHz & Carrier        & QRV  & JO89WG \\
+Repeater & FM     & SMØHGS/R & Skärholmen  & 145.7250  & -600kHz & 77,0 Hz        & QRV  & JO89WG \\
+Repeater & FM     & SMØWHP   & Sollentuna  & 434.6000  & -2MHz   & 1750 Hz        & QRV  & JO89XL \\
+Repeater & FM     & SKØCT/R  & Solna       & 434.9500  & -2MHz   & 77,0 Hz        & QRV  & JO89XJ \\
+Repeater & FM     & SKØZA/R  & Solna       & 434.8500  & -2MHz   & 123,0 Hz       & QRV  & JO89XI \\
+Repeater & FM     & SMØOFV/R & Solna       & 145.7625  & -600kHz & 123,0 Hz       & QRV  & JO99AI \\
+Repeater & FM     & SKØCT/R  & Solna       & 29.6200   & -100kHz & 77,0 Hz        & ?    & JO89XJ \\
+Repeater & FM     & SMØKOT   & Stockholm   & 434.8250  & -2MHz   & 1750 Hz        & QRT  &        \\
+Repeater & DMR    & SMØRMQ   & Stockholm   & 434.5125  & -2MHz   & DMR 240010     & QRV  & JO99CH \\
+Repeater & FM     & SMØWAJ/R & Stockholm   & 434.8375  & -2MHz   &                & Plan & JO99AH \\
+Hotspot  & D-Star & SKØVF-C  & Bandhagen   & 145.3625  &         & DV Carrier     & QRV  & JO99AG \\
+Hotspot  & D-Star & SKØVF-B  & Bandhagen   & 1296.7000 &         & DV Carrier     & QRV  & JO99AG \\
+Repeater & FM     & SKØCT/R  & Kista       & 1297.0250 & -6MHz   & Carrier        & QRV  & JO89XJ \\
+Repeater & FM     & SKØCT/R  & Kista       & 434.6250  & -2MHz   & 77,0 Hz        & QRV  & JO89XJ \\
+Repeater & FM     & SKØPQ/R  & Kista       & 145.6750  & -600kHz & 123,0 Hz       & QRV  & JO86XV \\
+Repeater & DMR    & SAØAZT/R & Kista       & 434.9875  & -2MHz   & DMR            & QRV  & JO89XJ \\
+Repeater & D-Star & SKØPT    & Kungsängen  & 434.5500  & -2MHz   & DV Carrier     & Plan & JO89UL \\
+Repeater & FM     & SMØYIX/R & Söder       & 434.7250  & -2MHz   & 77,0 Hz        & QRV  & JO99BH \\
+Repeater & DMR    & SKØNN    & Södertörn   & 434.5375  & -2MHz   & DMR            & QRV  & JO99CF \\
+Hotspot  & D-Star & SBØX-B   & Uppl. Väsby & 433.5750  &         & DV Carrier     & QRV  & JO89XM \\
+Repeater & DMR    & SKØRYG   & Uppl. Väsby & 434.7625  & -2MHz   & DMR/123,0Hz    & QR   & JO89XM \\
+Hotspot  & D-Star & SGØAMO   & Åkersberga  & 145.3625  &         & DV Carrier     & QRV  & JO99DL \\
+Repeater & FM     & SKØRIX   & Sthlm city  & 145.6250  & -600kHz & Carrier        & QRV  & JO99AH \\
+Repeater & DMR    & SKØMG    & Sthlm city  & 434.6875  & -2MHz   & DMR 240099     & QRV  & JO99AI \\
+Repeater & FM     & SM5DWC/R & Södertälje  & 434.8250  & -2MHz   & 1750/77,0Hz    & QRV  & JO89TE \\
+Repeater & FM     & SMØMMO/R & Tullinge    & 145.6625  & -600kHz & 77,0 Hz        & QRV  & JO89XF \\
+Repeater & FM     & SKØMT/R  & Täby        & 434.7000  & +1,6MHz & Carrier        & QRV  & JO99AK \\
+Repeater & FM     & SKØMT/R  & Täby        & 434.7375  & -2MHz   & 77,0 Hz        & Plan & JO99AK \\
+Repeater & DMR    & SKØMQ    & Täby        & 434.5625  & -2MHz   & DMR            & QRV  & JO99AK \\
+Repeater & FM     & SKØRYG   & Uppl. Väsby & 434.6750  & -2MHz   & 1750/77,0Hz    & QRV  & JO89XM \\
+Repeater & FM     & SKØRYG   & Uppl. Väsby & 51.9700   & -600kHz & 1750/77,0Hz    & QRV  & JO89WM
 \end{longtable}
 \begin{itemize}
 	\item[$^1$] Öppnas även med DTMF *
@@ -395,45 +394,47 @@ Repeater          & FM/C4FM      & SK1BL/R       & Endre	& 145.7750          & -
 \footnotesize
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion}                 & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
-Repeater                          & FM            & SK2AU/R       & Arjeplog            & 145.7000          & -600kHz        & 1750             & QRV             & JP86XC           \\
-Repeater                          & FM            & SM2TBQ/R      & Fatmomakke          & 145.675           & -600kHz        & 88,5Hz           & QRV             & JP75NC           \\
-Repeater                          & FM            & SK2TP/R       & Gällivare/Malmb.    & 145.6500          & -600kHz        & 1750             & QRV             & KP07HC           \\
-Repeater                          & FM            & SK2AU/R       & Jörn/Storklinta     & 145.7500          & -600kHz        & 1750             & QRV             & KP05BD           \\
-Repeater                          & FM            & SK2HG/R       & Kalix               & 51.9500           & -600kHz        & 1750/100,0Hz$^1$ & QRV             & KP15NU           \\
-Repeater                          & FM            & SK2HG/R5      & Kalix/Raggdynan     & 145.7250          & -600kHz        & 1750             & QRV             & KP15JV           \\
-Repeater                          & FM            & SK2RJH        & Kalix/Raggdynan     & 434.7500          & -2MHz          & 1750             & QRV             & KP15JV           \\
-Repeater                          & FM            & SK2HG/RU5     & Kalix-Vattent.      & 434.7250          & -2MHz          & 1750             & QRV             & KP15NU           \\
-Repeater                          & FM            & SK2RFR        & Kiruna              & 145.6250          & -600kHz        & 1750             & QRV             & KP07DU           \\
-Repeater                          & FM            & SK2RFR        & Kiruna C            & 434.8250          & -2MHz          & 1750             & QRV             & KP07DU           \\
-Repeater                          & FM            & SM2KOT/R      & Kristineb./Hornb.   & 145.6750          & -600kHz        & 1750             & QRV             & JP95GB           \\
-Repeater                          & FM            & SK2AZ/R       & Luleå               & 145.6500          & -600kHz        & 1750             & QRV             & KP15CO           \\
-Repeater                          & FM            & SK2LY/R       & Lycksele            & 145.6000          & -600kHz        & 1750             & QRT             & JP94IO           \\
-Repeater                          & FM            & SM2KXX        & Lycksele            & 434.7750          & -1,6MHz        & 1750             & QRV             & JP94HO           \\
-Repeater                          & FM            & SK2RLE        & Lycksele/Alsb.      & 145.7750          & -600kHz        & 1750             & QRT             & JP84VP           \\
-Repeater                          & FM            & SK2AT/R       & Nordmaling          & 434.6750          & -2MHz          & 67,0Hz           & QRV             & JP93RN           \\
-Repeater                          & FM            & SK2RME        & Piteå               & 145.6000          & -600kHz        & 1750             & QRT             & KP05PH           \\
-Repeater                          & FM            & SK2RME        & Piteå               & 434.6000          & -1,6MHz        & 1750             & QRV             & KP05RH           \\
-Repeater                          & FM            & SK2RME        & Piteå               & 29.6800           & -100kHz        & 1750/67Hz        & QRV             & KP05RH           \\
-Repeater                          & FM            & SK2RUQ        & Saxnäs/Marsfj.      & 145.7500          & -600kHz        & Mod.             & QRT             & JP74PX           \\
-Repeater                          & FM            & SK2HG/R3      & Seskarö             & 145.6750          & -600kHz        & 1750             & QRV             & KP15UR           \\
-Repeater                          & FM            & SK2AU/R       & Skellefteå          & 145.7000          & -600kHz        & 1750             & QRV             & KP04LS           \\
-Repeater                          & FM            & SK2AU/R       & Skellefteå          & 434.7000          & -2MHz          & 1750             & QRV             & KP05LS           \\
-Repeater                          & D-Star        & SK2RFV        & Skellefteå          & 434.5250          & -2MHz          & DV Carrier       & Plan            & KP04LS           \\
-Repeater                          & FM            & SK2RMD        & Sorsele             & 145.6000          & -600kHz        & 1750             & QRV             & JP85SM           \\
-Repeater                          & FM            & SK2RMR        & Storuman            & 145.7250          & -600kHz        & 1750             & QRV             & JP85NC           \\
-Repeater                          & FM            & SM2NLD/R      & Storuman            & 434.7500          & -1,6MHz        & 1750             & QRV             & JP85NC           \\
-Repeater                          & FM            & SK2RLF        & Tärnaby             & 145.6250          & -600kHz        & 1750             & QRV             & JP75PR           \\
-Repeater                          & D-Star        & SK2AT-C       & Umeå                & 145.6875          & -600kHz        & DV Carrier       & QRV             & KP03BU           \\
-Repeater                          & D-Star        & SK2AT-B       & Umeå                & 434.9750          & -2MHz          & DV Carrier       & QRV             & KP03BU           \\
-Repeater                          & FM            & SL2ZA/R       & Umeå/Ersmarksb.     & 145.6000          & -600kHz        & 1750             & QRT             & KP03EV           \\
-Repeater                          & FM            & SK2RLJ        & Umeå/Rödb.          & 145.6500          & -600kHz        & 1750             & QRV             & KP03CU           \\
-Repeater                          & FM            & SK2RLX        & Vilhelmina          & 145.7000          & -600kHz        & 1750             & QRT             & JP84HO           \\
-Repeater                          & FM            & SK2RLX        & Vilhelmina          & 434.7000          & -1,6MHz        & 1750             & QRT             & JP84HO           \\
-Repeater                          & FM            & SK2RYI        & Vindeln/Åsträsk     & 145.6250          & -600kHz        & 1750             & QRV             & KP04DP           \\
-Repeater                          & FM            & SK2RIU        & Vännäs/Granlundsb.  & 145.7250          & -600kHz        & 1750             & QRV             & JP93VU           \\
-Repeater                          & FM            & SK2RIU        & Vännäs/Granlundsb.  & 434.7250          & -2MHz          & 1750             & QRV             & JP93VU           \\
-Repeater                          & FM            & SK2RWJ        & Älvsbyn             & 145.6750          & -600kHz        & 1750             & QRV             & KP05LQ           \\
-Repeater                          & FM            & SK2HG/R6      & Överkalix           & 145.7500          & -600kHz        & 1750             & QRV             & KP16KH
+
+Repeater & FM     & SK2AU/R   & Arjeplog           & 145.7000 & -600kHz & 1750             & QRV  & JP86XC \\
+Repeater & FM     & SM2TBQ/R  & Fatmomakke         & 145.675  & -600kHz & 88,5Hz           & QRV  & JP75NC \\
+Repeater & FM     & SK2TP/R   & Gällivare/Malmb.   & 145.6500 & -600kHz & 1750             & QRV  & KP07HC \\
+Repeater & FM     & SK2AU/R   & Jörn/Storklinta    & 145.7500 & -600kHz & 1750             & QRV  & KP05BD \\
+Repeater & FM     & SK2HG/R   & Kalix              & 51.9500  & -600kHz & 1750/100,0Hz$^1$ & QRV  & KP15NU \\
+Repeater & FM     & SK2HG/R5  & Kalix/Raggdynan    & 145.7250 & -600kHz & 1750             & QRV  & KP15JV \\
+Repeater & FM     & SK2RJH    & Kalix/Raggdynan    & 434.7500 & -2MHz   & 1750             & QRV  & KP15JV \\
+Repeater & FM     & SK2HG/RU5 & Kalix-Vattent.     & 434.7250 & -2MHz   & 1750             & QRV  & KP15NU \\
+Repeater & FM     & SK2RFR    & Kiruna             & 145.6250 & -600kHz & 1750             & QRV  & KP07DU \\
+Repeater & FM     & SK2RFR    & Kiruna C           & 434.8250 & -2MHz   & 1750             & QRV  & KP07DU \\
+Repeater & FM     & SM2KOT/R  & Kristineb./Hornb.  & 145.6750 & -600kHz & 1750             & QRV  & JP95GB \\
+Repeater & FM     & SK2AZ/R   & Luleå              & 145.6500 & -600kHz & 1750             & QRV  & KP15CO \\
+Repeater & FM     & SK2LY/R   & Lycksele           & 145.6000 & -600kHz & 1750             & QRT  & JP94IO \\
+Repeater & FM     & SM2KXX    & Lycksele           & 434.7750 & -1,6MHz & 1750             & QRV  & JP94HO \\
+Repeater & FM     & SK2RLE    & Lycksele/Alsb.     & 145.7750 & -600kHz & 1750             & QRT  & JP84VP \\
+Repeater & FM     & SK2AT/R   & Nordmaling         & 434.6750 & -2MHz   & 67,0Hz           & QRV  & JP93RN \\
+Repeater & FM     & SK2RME    & Piteå              & 145.6000 & -600kHz & 1750             & QRT  & KP05PH \\
+Repeater & FM     & SK2RME    & Piteå              & 434.6000 & -1,6MHz & 1750             & QRV  & KP05RH \\
+Repeater & FM     & SK2RME    & Piteå              & 29.6800  & -100kHz & 1750/67Hz        & QRV  & KP05RH \\
+Repeater & FM     & SK2RUQ    & Saxnäs/Marsfj.     & 145.7500 & -600kHz & Mod.             & QRT  & JP74PX \\
+Repeater & FM     & SK2HG/R3  & Seskarö            & 145.6750 & -600kHz & 1750             & QRV  & KP15UR \\
+Repeater & FM     & SK2AU/R   & Skellefteå         & 145.7000 & -600kHz & 1750             & QRV  & KP04LS \\
+Repeater & FM     & SK2AU/R   & Skellefteå         & 434.7000 & -2MHz   & 1750             & QRV  & KP05LS \\
+Repeater & D-Star & SK2RFV    & Skellefteå         & 434.5250 & -2MHz   & DV Carrier       & Plan & KP04LS \\
+Repeater & FM     & SK2RMD    & Sorsele            & 145.6000 & -600kHz & 1750             & QRV  & JP85SM \\
+Repeater & FM     & SK2RMR    & Storuman           & 145.7250 & -600kHz & 1750             & QRV  & JP85NC \\
+Repeater & FM     & SM2NLD/R  & Storuman           & 434.7500 & -1,6MHz & 1750             & QRV  & JP85NC \\
+Repeater & FM     & SK2RLF    & Tärnaby            & 145.6250 & -600kHz & 1750             & QRV  & JP75PR \\
+Repeater & D-Star & SK2AT-C   & Umeå               & 145.6875 & -600kHz & DV Carrier       & QRV  & KP03BU \\
+Repeater & D-Star & SK2AT-B   & Umeå               & 434.9750 & -2MHz   & DV Carrier       & QRV  & KP03BU \\
+Repeater & FM     & SL2ZA/R   & Umeå/Ersmarksb.    & 145.6000 & -600kHz & 1750             & QRT  & KP03EV \\
+Repeater & FM     & SK2RLJ    & Umeå/Rödb.         & 145.6500 & -600kHz & 1750             & QRV  & KP03CU \\
+Repeater & FM     & SK2RLX    & Vilhelmina         & 145.7000 & -600kHz & 1750             & QRT  & JP84HO \\
+Repeater & FM     & SK2RLX    & Vilhelmina         & 434.7000 & -1,6MHz & 1750             & QRT  & JP84HO \\
+Repeater & FM     & SK2RYI    & Vindeln/Åsträsk    & 145.6250 & -600kHz & 1750             & QRV  & KP04DP \\
+Repeater & FM     & SK2RIU    & Vännäs/Granlundsb. & 145.7250 & -600kHz & 1750             & QRV  & JP93VU \\
+Repeater & FM     & SK2RIU    & Vännäs/Granlundsb. & 434.7250 & -2MHz   & 1750             & QRV  & JP93VU \\
+Repeater & FM     & SK2RWJ    & Älvsbyn            & 145.6750 & -600kHz & 1750             & QRV  & KP05LQ \\
+Repeater & FM     & SK2HG/R6  & Överkalix          & 145.7500 & -600kHz & 1750             & QRV  & KP16KH
+
 \end{longtable}
 \begin{itemize}
 	\item[$^1$] Öppnas även med DTMF 3
@@ -807,7 +808,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 \subsection{Bandplaner VHF--UHF}
 \subsubsection{Bandplan 6m 50--52 MHz}
 \begin{tabular}{rrrll}
-\textbf{Frekvens} &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
+\textbf{Frekvens}                 &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
 		           50.000 & 50.100        & 500 Hz        & CW                  & \textbf{CW anrp. 50.050 och 50.090 (interkont.)}             \\ \hline
 		           50.100 & 50.130        & 2.7 kHz       & CW, SSB             & Interkontinental DX-trafik. Ej QSO inom Europa               \\ \hline
 		           50.100 & 50.200        & 2.7 kHz       & CW,SSB              & DX 50.110--50.130, \textbf{50.110 50.150 anrop (interkont.)} \\ \hline
@@ -824,7 +825,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 \clearpage
 \subsubsection{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
-\textbf{Frekvens}         &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
+\textbf{Frekvens}                 &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
 	         144.0000         & 144.1100      & 500 Hz        & CW, EME             & \textbf{CW anrop 144.050}                                    \\
                                   &               &               &                     & MS random 144.100                                            \\ \hline
 	         144.1100         & 144.1500      & 500 Hz        & CW, MGM             & EME MGM 144.120--144.160                                     \\
