Fixade en felstavning

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -633,8 +633,8 @@ Repeater & FM     & SK5RHQ   & Västerås          & 145.7750 & -600KHz & 1750/8
 \footnotesize
 \begin{longtable}{llllrrlcl}
 
-\Textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & 
-\textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
+\textbf{Funktion} & \textbf{Typ}    & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & 
+\textbf{Access}   & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
 
 Repeater & FM     & SK6RIC   & Alingsås            & 145.6250  & -600KHz & 1750/114,8Hz    & QRV  & JO67GW \\
 Repeater & FM     & SK6RIC   & Alingsås            & 434.6250  & -2MHz   & 1750/114,8Hz    & QRV  & JO67GW \\
