Lade till hyperref package

--- a/rhb-pad.tex
+++ b/rhb-pad.tex
@@ -3,7 +3,7 @@
 \documentclass[10pt,swedish,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
-\usepackage{longtable}
+\usepackage{hyperref}
 \usepackage[a5paper,textwidth=12cm,
 	textheight=17cm,bindingoffset=0pt]{geometry}
 \usepackage{amsmath}
