Stora tillägg i HF-delen. Trafikinstruktioner och alla bandplaner omarbetade.

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -1,4 +1,22 @@
+\section{Trafik- och tumregler HF}
+
+\begin{itemize}
+\item QRP: Aktivitetscentrum för låg effek (< 5W), svaga signaler förekommer, visa stor hänsyn för detta!
+\item QRS: Aktivitetscenter för långsam CW
+\item QRSS: Extremt långsam CW med dator
+\item DV: Digital Voice
+\item Image: Bildmoder exempelvis SSTV och Fax inom max bandbredd
+\item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB på frekvenser över 10 MHz.
+\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant!
+\item Högsta acceptable inställda frekvens för USB är 3 kHz under övre bandkant!
+\end{itemize}
+
+Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej förekommer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
+
+Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
+
 \begin{landscape}
+
 \section{Frekvenser Amatörradio HF}
 
 %% \section{Repeatrar, länkar och fyrar}
@@ -12,86 +30,169 @@
 
 \subsection{Bandplaner HF}
 
-\subsubsection{Bandplan 3.5 MHz}
+Alla frekvenser i kHz, bandbredder i Hz.
+
+
+\subsubsection{Bandplan 2.2 km, 135,7--137,8}
 \begin{tabular}{rrrll}
-\textbf{Frekvens} &      & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                          \\ \hline
-3500              & 3510 & 200         & CW              & Prioritet för intekontinentala QSO \\ \hline
-3510              & 3560 & 200         & CW              & Contest, 3555 kHz aktivitetscenter           \\ \hline
-3560              & 3580 & 200         & CW              & QRP med 3560 kHz som aktivitetscenter        \\ \hline
-3580              & 3590 & 500         & Smalband        & Digitala och analoga smalbandsmoder          \\ \hline
-3590              & 3600 & 500         & Smalband        & Ditigala moder, automatiska sändare          \\ \hline
-3600              & 3620 & 2700        & Alla moder      & Digitala moder automatiska sändare           \\ \hline
-3600              & 3650 & 2700        & Alla moder      & Digital voice 3630 kHz aktivitetscenter      \\ 
-                  &      &             &                 & SSB contest har prioritet                    \\ \hline
-3650              & 3700 & 2700        & Alla moder      & SSB QRP med 3690 kHz som aktivitetscenter    \\ \hline
-3700              & 3800 & 2700        & Alla moder      & SSB contest har prioritet                    \\
-                  &      &             &                 & 3735 kHz Bildöverföring aktivitetscenter     \\
-                  &      &             &                 & 3760 kHz Region 1 Nödtrafik Aktivitetscenter \\ \hline
-3775              & 3800 & 2700        & Alla moder      & Prioritet för interkontinental trafik        \\ \hline
-\end{tabular}
-\clearpage
+\textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
-\subsubsection{Bandplan 7 MHz}
+135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 600 m, 472--479 kHz}
 \begin{tabular}{rrrll}
-\textbf{Frekvens} &      & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                          \\ \hline
-7000              & 7040 & 200         & CW              & CW QRP 7030 kHz aktivitetscenter             \\ \hline
-7040              & 7047 & 500         & Smalband        & Även digitala moder                          \\ \hline
-7047              & 7050 & 500         & Smalband        & Även digitala moder, aut. sändare            \\ \hline
-7050              & 7053 & 2700        & Alla moder      & Även digitala moder aut. sändare             \\ \hline
-7053              & 7060 & 2700        & Alla moder      & Även digitala moder                          \\ \hline
-7060              & 7100 & 2700        & Alla moder      & SSB contest prioritet                        \\ 
-                  &      &             &                 & 7070 kHz Digital Voice aktivitetscenter      \\
-                  &      &             &                 & 7090 kHz SSB QRP aktivitetscenter            \\ \hline
-7100              & 7130 & 2700        & Alla moder      & 7110 kHz Region 1 Nödsamtal aktivitetscenter \\ \hline
-7130              & 7200 & 2700        & All modes       & SSB contest prioritet                        \\
-                  &      &             &                 & 7165 kHz Bildöverföring aktivitetscenter     \\\hline
-7175              & 7200 & 2700        & Alla moder      & Prioritet för interkontinental traffik       \\ \hline
-\end{tabular}
-\clearpage
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
-\subsubsection{Bandplan 10 MHz}
+472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 160 m, 1810--2000 kHz}
 \begin{tabular}{rrrll}
-\textbf{Frekvens} &        & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}             \\ \hline
-10,100            & 10,140 & 200         & CW              & 10,116 MHz QRP Aktivitetscenter \\ \hline
-10,140            & 10,150 & 500         & Smalband        & Även digitala moder             \\ \hline
-\end{tabular}
-\clearpage
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
-\subsubsection{Bandplan 14 MHz}
+1 810 & 1 838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
+1 838 & 1 840 & 500  & Smalband   & Ej packet på 160m, PSK 1 838,150                    \\ \hline
+1 840 & 1 850 & 2700 & Alla moder & Även digimode. SSB QRP 1 843 kHz                    \\ \hline
+1 850 & 2 000 & 2700 & Alla moder & OBS! Högst 10 W till antennen i detta segment       \\ \hline
+\end{tabular}
+
+
+\subsubsection{Bandplan 80 m, 3500--3800 kHz}
 \begin{tabular}{rrrll}
-\multicolumn{2}{c}{\textbf{Frekvens}} &  \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
-14,000 & 14,060 & 200  & CW         & Contest prioriterat                          \\
-       &        &      &            & 14,055 MHz QRS Centre of Activity            \\ \hline
-14,060 & 14,070 & 200  & CW         & 14,060 MHz QRP Centre of Activity            \\ \hline
-14,070 & 14,089 & 500  & Smalband   & Även digitalt                                \\ \hline
-14,089 & 14,099 & 500  & Smalband   & Även digitalt, automatiska sändare           \\ \hline
-14,099 & 14,101 &      & Fyrar      & Exklusivt fyrband                            \\ \hline
-14,101 & 14,112 & 2700 & Alla moder & Även digitalt, automatiska sändare           \\ \hline
-14,112 & 14,125 & 2700 & Alla moder &                                              \\ \hline
-14,125 & 14,300 & 2700 & Alla moder & SSB contest har prioritet                    \\ 
-       &        &      &            & 14,130 MHz DV aktivitetscenter               \\
-       &        &      &            & 14,195 MHz ± 5 kHz DXpeditioner prio         \\
-       &        &      &            & 14,230 MHz Bildöverföring aktivitetscenter   \\
-       &        &      &            & 14,285 MHz SSB QRP aktivitetscenter          \\ \hline
-14,300 & 14,350 & 2700 & Alla moder & 14,300 MHz Global nödtrafik aktivitetscenter \\ \hline
+3 500 & 3 510 & 200  & CW             & Exklusivt CW                         \\ 
+      &       &      &                & Interkontinental DX-trafik har prio  \\ \hline
+3 510 & 3 580 & 200  & CW             & Exklusivt CW contest 3510-–560       \\ 
+      &       &      &                & CW QRS 3 555 kHz, CW QRP 3 560       \\ \hline
+3 580 & 3 600 & 500  & Smalband, Digi & PSK 3 580,150                        \\
+      &       &      &                & Automatiska Digimoder 3 590--600     \\ \hline
+3 600 & 3 620 & 2700 & Alla moder     & Digimoder Automatiska Digimoder      \\ \hline
+3 600 & 3 650 & 2700 & Alla moder     & SSB contest 3 600--650               \\
+      &       &      &                & DV 3 630                             \\ \hline
+3 650 & 3 700 & 2700 & Alla moder     & SSB QRP 3 690                        \\ \hline
+3 700 & 3 800 & 2700 & Alla moder     & Contest 3 700-–800                   \\
+      &       &      &                & Image 3 775                          \\
+      &       &      &                & Region 1 nödfrekvens 3 760           \\ \hline
+3 775 & 3 800 & 2700 & Alla moder     & Interkontinental DX-trafik prioritet \\ \hline
 \end{tabular}
-\clearpage
 
-\subsubsection{Bandplan 18 MHz}
+\subsubsection{Bandplan 40 m, 7000--7200 kHz}
 \begin{tabular}{rrrll}
-\multicolumn{2}{c}{\textbf{Frekvens}} &  \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
-18,068 & 18,095 & 200  & CW         & 18,086 kHz QRP aktivitetscenter          \\ \hline
-18,095 & 18,105 & 500  & Smalband   & Även digitala moder                      \\ \hline
-18,105 & 18,109 & 500  & Smalband   & Även digitala moder, automatiska sändare \\ \hline
-18,109 & 18,111 &      & Fyrar      & Exklusivt fyrband                        \\ \hline
-18,111 & 18,120 & 2700 & Alla moder & Även digitalt och autom. sändare         \\ \hline
-18,120 & 18,168 & 2700 & Alla moder & 18,130 MHz SB QRP aktivitetscenter       \\
-       &        &      &            & 18,150 MHz DV aktivitetscenter           \\
-       &        &      &            & 18,160 MHz globala nödsamtal             \\ \hline
-
+7 000 & 7 040 & 200  & CW         & Exklusivt CW.                             \\
+      &       &      &            & QRP aktivitetscentrum 7 030 kHz           \\ \hline
+7 040 & 7 050 & 500  & Smalband   & Digimoder Automatiska inom 7 047–-050 kHz \\ \hline
+7 050 & 7 060 & 2700 & Alla moder & Digimoder Automatiska inom 7 050–-053 kHz \\ \hline
+7 060 & 7 100 & 2700 & Alla moder & SSB contest i segmentet                   \\
+      &       &      &            & DV 7 070 kHz, SSB QRP 7 090 kHz           \\ \hline
+7 100 & 7 130 & 2700 & Alla moder & Region 1 nödfrekvens 7 110 kHz            \\ \hline
+7 130 & 7 200 & 2700 & Alla moder & SSB contest i segmentet                   \\
+      &       &      &            & Image 7 165 kHz                           \\ \hline
+7 175 & 7 200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
+
+
+\subsubsection{Bandplan 30 m, 10100--10150 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+10 100 & 10 140 & 200 & CW       & CW exkl. Max 150 Watt på 30 meter    \\
+       &        &     &          & CW QRP 10116 kHz                     \\ \hline
+10 140 & 10 150 & 500 & Smalband & Digimoder PSK 10142.150 kHzEj Packet \\ \hline
+\end{tabular}
+
+
+
+\subsubsection{Bandplan 20 m, 14000--14350 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+14 000 & 14 070 & 200  & CW         & Exklusivt CW                            \\
+       &        &      &            & Contest 14 000-–060                     \\
+       &        &      &            & CW QRS 14 055, CW QRP 14 060            \\ \hline
+14 070 & 14 099 & 500  & Smalband   & PSK 14 070,150                          \\
+       &        &      &            & Auto Digimoder 14 089-–099              \\ \hline
+14 099 & 14 101 & 200  & Fyrar      & Exklusivt IBP, endast fyrar             \\ \hline
+14 101 & 14 112 & 2700 & Alla moder & Digitala moder och obevakade Digimoder  \\ \hline
+14 112 & 14 350 & 2700 & Alla moder & SSB Contest 14 125--300                 \\
+       &        &      &            & DV 14 130, DXpedition prio 14 195$\pm$5 \\ \hline
+14 300 & 14 350 & 2700 & Alla moder & Image 14 230, SSB QRP 14 285            \\
+       &        &      &            & Global nödfrekvens 14 300               \\ \hline
+\end{tabular}
+
+
+
+
+\subsubsection{Bandplan 17 m, 18068--18168 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+18 068 & 18 095 & 200  & CW         & CW exklusivt. QRP 18 086             \\ \hline
+18 095 & 18 109 & 500  & Smalband   & Digimoder PSK 18 100,150             \\
+       &        &      &            & Automatiska Digimoder 18 105-–18 109 \\ \hline
+18 109 & 18 111 & 200  & Fyrar      & Exklusivt fyrar, IBP fyrnät          \\ \hline
+18 111 & 18 168 & 2700 & Alla moder & Digi 18 111–-18 120                  \\
+       &        &      &            & SSB QRP 18 130, DV 18 150            \\
+       &        &      &            & Global nödfrekv. 18 160\\ \hline
+\end{tabular}
+
+
+\subsubsection{Bandplan 15 m, 21000--21450 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+21 000 & 21 070 & 200  & CW         & Exklusivt CW, QRS 21 055, CW QRP 21 060          \\ \hline
+21 070 & 21 110 & 500  & Smalband   & PSK 21080.150, Automatiska Digimoder 21 090–-110 \\
+21 110 & 21 120 & 2700 & Alla moder & Alla moder utom SSB!                             \\
+       &        &      &            & Digimoder, och Automatiska Digimoder             \\ \hline
+21 120 & 21 149 & 500  & Smalband   &                                                  \\ \hline
+21 149 & 21 151 & 200  & Fyrar      & Exklusivt fyrar. IBP fyrnät                      \\ \hline
+21 151 & 21 450 & 2700 & Alla moder & DV 21 180, SSB QRP 21 285, Image 21 340          \\
+       &        &      &            & Global nödfrekv. 21 360                          \\ \hline
+\end{tabular}
+
+
+
+\subsubsection{Bandplan 12 m, 24890--24990 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+24 890 & 24 915 & 200  & CW         & Exklusivt CW, QRP 24 906                             \\ \hline
+24 915 & 24 929 & 500  & Smalband   & PSK 24 920.150, Automatiska Digimoder 24 925–-24 929 \\ \hline
+24 929 & 24 931 & 200  & Fyrar      & Fyrar, IBP fyrnät                                    \\ \hline
+24 931 & 24 990 & 2700 & Alla moder & Auto Digimoder 24 931-–24 940                        \\
+       &        &      &            & SSB QRP 24 950, DV 24 960                            \\ \hline
+\end{tabular}
+
+
+
+\subsubsection{Bandplan 10 m, 28000-29700 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+28 000 & 28 070 & 200  & CW         & Exklusivt CW, QRS 28 055, CW QRP 28 060                   \\ \hline
+28 070 & 28 190 & 500  & Smalband   & PSK 28 120.150, Auto Digimoder inom 28 120--150           \\ \hline
+28 190 & 28 199 & 200  & Fyrar IBP  & Regionala fyrar med tidsdelning                           \\ \hline
+28 199 & 28 201 & 200  & Fyrar IBP  & IBP fyrnät                                                \\ \hline
+28 201 & 28 225 & 200  & Fyrar IBP  & kontinuerligt sändande fyrar                              \\ \hline
+28 225 & 28 300 & 2700 & Alla moder & Övriga fyrar                                              \\ \hline
+28 300 & 28 320 & 2700 & Alla moder & Digimoder och Automatiska Digimoder                       \\ \hline
+28 320 & 29 100 & 2700 & Alla moder & DV 28 330 kHz, SSB QRP 28 360 kHz                         \\
+       &        &      &            & Image 28 680 kHz                                          \\ \hline
+29 100 & 29 200 & 6000 & Alla moder & FM simplex, 10 kHz kanaler                                \\
+       &        &      &            & Maximalt ±2.5 kHz dev., max 2.5 kHz mod.frek.             \\ \hline
+29 200 & 29 300 & 6000 & Alla moder & Digimoder och Automatiska Digimoder                       \\ \hline
+29 300 & 29 510 & 6000 & Satellit   & Nerlänk fr. satellit. INGEN SÄNDNING I SEGMENTET          \\ \hline
+29 510 & 29 520 & 6000 & Skydd      & Skyddsfrekvens för satelliter. INGEN SÄNDNING I SEGMENTET \\ \hline
+29 520 & 29 590 & 6000 & Alla moder & FM Repeater in RH1–-RH8, 100 kHz duplex, 2.5 kHz NBFM     \\ \hline
+29 600 & 29 620 & 6000 & Alla moder & FM simplex, anrop 29 600                                  \\
+       &        &      &            & FM simplex repeater 29 610                                \\ \hline
+29 620 & 29 700 & 6000 & Alla moder & FM Repeater ut RH1–-RH8, 100 kHz duplex                   \\ \hline
+\end{tabular}
+
 \clearpage
 
 \small
