Justerat och satt samman HF/VHF/UHF i den fulla handboken

--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -3,15 +3,16 @@
 \documentclass[12pt,swedish,a4paper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
-\usepackage{longtable}
+\usepackage[hidelinks]{hyperref}
 \usepackage[a4paper,bindingoffset=1cm]{geometry}
 \usepackage{amsmath}
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
 
-\input{init-vhf}
+\input{init-full}
 \input{body}
+\input{body-hf}
 \input{body-vhf}
 
 \end{document}
