--- a/rhb-pad.tex
+++ b/rhb-pad.tex
@@ -3,7 +3,7 @@
 \documentclass[10pt,swedish,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[a5paper,textwidth=12cm,
 	textheight=17cm,bindingoffset=0pt]{geometry}
 \usepackage{amsmath}
@@ -15,7 +15,7 @@
 \usepackage[helvet]{sfmath}
 %\usepackage{avant}
 
-\input{init-vhf}
+\input{init-full}
 \input{body}
 \input{body-hf}
 \input{body-vhf}
