Fixade 'raggedbottom' för att minska spridningen av whitespace vertikalt.

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -3,11 +3,11 @@
 \section{Trafik- och tumregler HF}
 
 \begin{itemize}
-\item QRP: Aktivitetscentrum för låg effek (< 5W), svaga signaler förekommer, visa stor hänsyn för detta!
+\item QRP: Aktivitetscentrum för låg effek ($<$5W), svaga signaler förekommer, visa stor hänsyn för detta!
 \item QRS: Aktivitetscenter för långsam CW
 \item QRSS: Extremt långsam CW med dator
 \item DV: Digital Voice
-\item Image: Bildmoder exempelvis SSTV och Fax inom max bandbredd
+\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade max bandbredd
 \item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB på frekvenser över 10 MHz.
 \item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant!
 \item Högsta acceptable inställda frekvens för USB är 3 kHz under övre bandkant!
@@ -19,7 +19,7 @@ Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekter
 
 \begin{landscape}
 
-\section{Frekvenser Amatörradio HF}
+\section{Frekvenser Amatörradio LF/MF/HF}
 
 %% \section{Repeatrar, länkar och fyrar}
 %% \subsection{Svenska fyrar HF}
@@ -30,40 +30,32 @@ Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekter
 %% 	\endhead
 %% 	Repeater          & FM           & SMØWIU/R      & Botkyrka     & 434.8750          & -2MHz          & 77,0Hz          & QRV             & JO89WF           \\
 
-\subsection{Bandplaner HF}
-
+\subsection{Bandplaner LF/MF/HF}
 Alla frekvenser i kHz, bandbredder i Hz.
-
 
 \subsubsection{Bandplan 2.2 km, 135,7--137,8}
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
 \end{tabular}
 
 \subsubsection{Bandplan 600 m, 472--479 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 160 m, 1810--2000 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 1 810 & 1 838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
 1 838 & 1 840 & 500  & Smalband   & Ej packet på 160m, PSK 1 838,150                    \\ \hline
 1 840 & 1 850 & 2700 & Alla moder & Även digimode. SSB QRP 1 843 kHz                    \\ \hline
 1 850 & 2 000 & 2700 & Alla moder & OBS! Högst 10 W till antennen i detta segment       \\ \hline
 \end{tabular}
 
-
 \subsubsection{Bandplan 80 m, 3500--3800 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 3 500 & 3 510 & 200  & CW             & Exklusivt CW                         \\ 
       &       &      &                & Interkontinental DX-trafik har prio  \\ \hline
 3 510 & 3 580 & 200  & CW             & Exklusivt CW contest 3510-–560       \\ 
@@ -83,7 +75,6 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \subsubsection{Bandplan 40 m, 7000--7200 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 7 000 & 7 040 & 200  & CW         & Exklusivt CW.                             \\
       &       &      &            & QRP aktivitetscentrum 7 030 kHz           \\ \hline
 7 040 & 7 050 & 500  & Smalband   & Digimoder Automatiska inom 7 047–-050 kHz \\ \hline
@@ -96,22 +87,17 @@ Alla frekvenser i kHz, bandbredder i Hz.
 7 175 & 7 200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
-
 \subsubsection{Bandplan 30 m, 10100--10150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 10 100 & 10 140 & 200 & CW       & CW exkl. Max 150 Watt på 30 meter    \\
        &        &     &          & CW QRP 10116 kHz                     \\ \hline
 10 140 & 10 150 & 500 & Smalband & Digimoder PSK 10142.150 kHzEj Packet \\ \hline
 \end{tabular}
 
-
-
 \subsubsection{Bandplan 20 m, 14000--14350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 14 000 & 14 070 & 200  & CW         & Exklusivt CW                            \\
        &        &      &            & Contest 14 000-–060                     \\
        &        &      &            & CW QRS 14 055, CW QRP 14 060            \\ \hline
@@ -125,13 +111,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & Global nödfrekvens 14 300               \\ \hline
 \end{tabular}
 
-
-
-
 \subsubsection{Bandplan 17 m, 18068--18168 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 18 068 & 18 095 & 200  & CW         & CW exklusivt. QRP 18 086             \\ \hline
 18 095 & 18 109 & 500  & Smalband   & Digimoder PSK 18 100,150             \\
        &        &      &            & Automatiska Digimoder 18 105-–18 109 \\ \hline
@@ -141,11 +123,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & Global nödfrekv. 18 160\\ \hline
 \end{tabular}
 
-
 \subsubsection{Bandplan 15 m, 21000--21450 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 21 000 & 21 070 & 200  & CW         & Exklusivt CW, QRS 21 055, CW QRP 21 060          \\ \hline
 21 070 & 21 110 & 500  & Smalband   & PSK 21080.150, Automatiska Digimoder 21 090–-110 \\
 21 110 & 21 120 & 2700 & Alla moder & Alla moder utom SSB!                             \\
@@ -156,12 +136,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & Global nödfrekv. 21 360                          \\ \hline
 \end{tabular}
 
-
-
 \subsubsection{Bandplan 12 m, 24890--24990 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 24 890 & 24 915 & 200  & CW         & Exklusivt CW, QRP 24 906                             \\ \hline
 24 915 & 24 929 & 500  & Smalband   & PSK 24 920.150, Automatiska Digimoder 24 925–-24 929 \\ \hline
 24 929 & 24 931 & 200  & Fyrar      & Fyrar, IBP fyrnät                                    \\ \hline
@@ -169,12 +146,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & SSB QRP 24 950, DV 24 960                            \\ \hline
 \end{tabular}
 
-
-
 \subsubsection{Bandplan 10 m, 28000-29700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-
 28 000 & 28 070 & 200  & CW         & Exklusivt CW, QRS 28 055, CW QRP 28 060                   \\ \hline
 28 070 & 28 190 & 500  & Smalband   & PSK 28 120.150, Auto Digimoder inom 28 120--150           \\ \hline
 28 190 & 28 199 & 200  & Fyrar IBP  & Regionala fyrar med tidsdelning                           \\ \hline
